remove orchestrator
